# IntermediateRepresentation

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ubuntu.yml
docs/: IntermediateRepresentation.graphml
docs/ReleaseNotes/: v0.11.0.md  v0.12.0.md  v0.13.0.md  v0.14.0.md  v0.15.0.md  v0.15.1.md
include/IR/: ir.hpp
tools/packaging/: CMakeLists.txt
